homeworks/12_kubernetes/05-cni/hello-world.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: app-namespace
spec:
  selector:
    matchLabels:
      app: hello-world
  replicas: 2 
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: k8s.gcr.io/echoserver:1.4
        ports:
          - containerPort: 8080
